--- a/report/02-practical.tex
+++ b/report/02-practical.tex
@@ -1,148 +1,127 @@
 \chapter{Практическая часть}
 
-\section{Используемые инструменты}
+\section{Модель базы знаний}
+База знаний реализована с использованием фреймовой модели: каждый сорт пива представлен как фрейм с набором атрибутов (слотов).  
 
-Для реализации нечеткой системы использована библиотека \texttt{scikit-fuzzy} и язык
- Python 3.  
-Основные зависимости:
+\subsection{Пример фрейма}
+
+\begin{verbatim}
+Фрейм: IPA
+  Горечь: высокая
+  Сладость: низкая
+  Аромат: цитрусовый, хвойный, хмелевой
+  Цвет: золотистый
+  Крепость: сильная
+  Страна: Великобритания
+\end{verbatim}
+
+\subsection{ER-диаграмма}
+Ниже на рисунке \ref{fig:beer-er} представлена диаграмма сущностей и связей в нотации Чена:~
+\newpage
+
+\begin{figure}[h!]
+\begin{center}
+\begin{tikzpicture}[
+  entity/.style={rectangle, draw=black, thick, minimum width=4cm, minimum height=1.2cm, align=center, fill=white},
+  relationship/.style={diamond, draw=black, thick, minimum width=2.4cm, minimum height=1.2cm, align=center, fill=white},
+  >=Stealth,
+  every edge/.style={draw,->,>=Stealth},
+  font=\large
+]
+
+
+% Центральная сущность
+\node[entity] (beer) at (-2,0) {Пиво};
+
+% Остальные сущности — увеличенные расстояния
+\node[entity] (taste)      at (-8,-5) {Вкус};
+\node[entity] (country)    at (5,-12)  {Страна};
+\node[entity] (preference) at (-8,-12) {Предпочтение};
+\node[entity] (color) at (-3,-5) {Цвет};
+\node[entity] (hardness) at (2,-5) {Крепость};
+
+
+\node[relationship] (has)      at (-8,-2.5) {имеет};
+\node[relationship] (assoc)    at (5,-8)  {ассоциируется};
+\node[relationship] (matches)  at (-8,-8.5)  {соответствует};
+
+
+% Пиво → Вкус
+\draw (beer.south) -- ++(0,-0.4) -| (has.north);
+\draw (has.south) -- ++(0,-0.4) -| (taste.north);
+\draw (has.south) -- ++(0,-0.4) -| (color.north);
+\draw (has.south) -- ++(0,-0.4) -| (hardness.north);
+
+
+% Пиво → Страна
+\draw (beer.south) -- ++(0,-0.4) -| (assoc.north);
+\draw (assoc.south) -- ++(0,-0.4) -| (country.north);
+
+% Предпочтение → Вкус
+\draw (preference.north) -- ++(0,0.4) -- (matches.south);
+\draw (matches.north) -- ++(0,0.4) -| (taste.south);
+\draw (matches.north) -- ++(0,0.4) -| (color.south);
+\draw (matches.north) -- ++(0,0.4) -| (hardness.south);
+
+
+
+\end{tikzpicture}
+\end{center}
+\caption{ER-диаграмма предметной области «Сорта пива»}
+\label{fig:beer-er}
+\end{figure}
+
+
+\section{Типовой сценарий взаимодействия}
+Пользователь выбирает один из пунктов меню:
+\begin{enumerate}
+    \item Показать характеристики пива
+    \item Рекомендовать пиво по вкусу
+    \item Найти пиво по стране происхождения
+    \item Найти пиво по крепости и цвету
+\end{enumerate}
+
+Пример использования:
+\begin{verbatim}
+Выбор пункта меню: Рекомендовать пиво по вкусу
+Выбор горечи: средняя
+Выбор аромата: фруктовый
+Результат: Эль, Американский Эль
+\end{verbatim}
+
+\section{Пример работы программы}
+\begin{verbatim}
+=== Экспертная система: Вкусы пива ===
+1. Показать характеристики пива
+2. Рекомендовать пиво по вкусу
+3. Найти по стране происхождения
+4. Найти по крепости и цвету
+0. Выход
+Выберите действие: 2
+
+Выберите желаемую горечь:
+1. низкая
+2. средняя
+3. высокая
+Номер горечи: 2
+
+Выберите желаемый аромат:
+1. фруктовый
+2. цветочный
+3. шоколадный
+...
+Номер аромата: 1
+
+Рекомендуется: Эль, Американский Эль
+\end{verbatim}
+
+\section{Заключение}
+В ходе лабораторной работы была разработана экспертная система по сортам пива с фреймовой базой знаний.  
+Система позволяет:
 \begin{itemize}
-    \item \texttt{numpy} — численные вычисления;
-    \item \texttt{matplotlib} — визуализация;
-    \item \texttt{scikit-fuzzy} — функции принадлежности и дефаззификация.
+    \item хранить информацию о более чем 20 сортах пива с различными характеристиками;
+    \item делать рекомендации по вкусовым предпочтениям, стране происхождения и крепости/цвету;
+    \item демонстрировать атрибуты конкретного сорта пива пользователю.
 \end{itemize}
 
-\section{Функции принадлежности}
-
-На рисунках \ref{img:de}-\ref{img:vf} представлены функции 
-принадлежности нечетких переменных.
-
-    \includeimage
-        {de}
-        {f}
-        {h}
-        {0.55\textwidth}
-        {Функция принадлежности расстояния между автомобилями}
-
-    \includeimage
-        {dd}
-        {f}
-        {h}
-        {0.55\textwidth}
-        {Функция принадлежности изменения расстояния}
-
-    \includeimage
-        {vf}
-        {f}
-        {h}
-        {0.55\textwidth}
-        {Функция принадлежности скорости автопилота}
-
-        \newpage
-
-\section{Реализация алгоритма Ларсена}
-
-В библиотеке scikit-fuzzy в качестве алгоритма логического вывода применяется
-алгоритм Мамдани, без возможности выбора альтернативы. 
-Одним из вариантов реализации алгоритма Ларсена с использованием
-scikit-fuzzy, требует модификации исходного кода библиотеки.
-
-\includelistingpretty
-{rule.py} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{python} % Язык программирования (необязательный аргумент)
-{Исходный код библиотеки scikit-fuzzy, rule.py} % Подпись листинга
-
-Как видно из листинга \ref{lst:rule.py}, выходом функции логического И является 
-минимальное из двух значений \lstinline|and_func = np.fmin| (по Мамдани).
-Заменив этот кусок кода на \lstinline|and_func=np.multiply|, получим алгоритм вывода
-Ларсена.
-
-\section{Результаты}
-
-\subsection{Моделирование реакции системы на единичное ступенчатое
- воздействие}
-
-На рисунках \ref{img:disErr_com}-\ref{img:izmCor_com} показаны результаты
- моделирования системы при единичном ступенчатом воздействии.
-
-    \includeimage
-        {disErr_com}
-        {f}
-        {h}
-        {0.65\textwidth}
-        {График изменения ошибки системы}
-
-    \includeimage
-        {izmScor_com}
-        {f}
-        {h}
-        {0.65\textwidth}
-        {График изменения скорости автомобилей}
-
-        
-    \includeimage
-        {izmCor_com}
-        {f}
-        {h}
-        {0.65\textwidth}
-        {График изменения координат автомобилей}
-
-\newpage
-
-\subsection{Моделирование реакции системы на двухступенчатое воздействие}
-
-На рисунках \ref{img:disErr_sl}-\ref{img:izmCor_sl} показаны результаты
- моделирования системы при двухступенчатом воздействии.
-
-    \includeimage
-        {disErr_sl}
-        {f}
-        {h}
-        {0.65\textwidth}
-        {График изменения ошибки системы}
-
-    \includeimage
-        {izmScor_sl}
-        {f}
-        {h}
-        {0.65\textwidth}
-        {График изменения скорости автомобилей}
-
-    \includeimage
-        {izmCor_sl}
-        {f}
-        {h}
-        {0.65\textwidth}
-        {График изменения координат автомобилей}
-
-\newpage
-
-Среднеквадратичная ошибка поддержания дистанции при моделировании системы составила:
-\[
-MSE = 0.0540.
-\]
-
-Шаг интегрирования \( dt = 0.1 \) и время моделирования \( T = 50 \, c \).
-
-\section{Работа системы при алгоритме логического вывода Мамдани}
-Для сравнения рассмотрим результаты работы системы при применении алгоритма Мамдани.
-На рисунках \ref{img:disErr_mam} и \ref{img:izmScor_mam} 
-приведены результаты моделирования системы при 
-двухступенчатом воздействии, выполненном с использованием 
-алгоритма Мамдани. Как видно из полученных результатов, 
-переходный режим системы имеет более колебательный характер, чем
-при использовании алгоритма Ларсена.
-
-    \includeimage
-        {disErr_mam}
-        {f}
-        {h}
-        {0.65\textwidth}
-        {График изменения ошибки системы}
-
-    \includeimage
-        {izmScor_mam}
-        {f}
-        {h}
-        {0.65\textwidth}
-        {График изменения скорости автомобилей}
-
+Дальнейшее развитие системы может включать расширение базы знаний, подключение пользовательских отзывов, а также интеграцию с графическим интерфейсом.
