--- a/report/report.tex
+++ b/report/report.tex
@@ -2,6 +2,13 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T2A]{fontenc}
 % \usepackage[russian]{babel}
+\usepackage{tikz}
+\usetikzlibrary{positioning,shapes.geometric,arrows.meta}
+\usepackage{amsmath}
+\usepackage{graphicx}
+\usepackage{longtable}
+\usepackage{geometry}
+
 
 % Отключаем растягивание шрифтов
 \microtypesetup{expansion=false}
