--- a/report/03-appendix.tex
+++ b/report/03-appendix.tex
@@ -1,7 +1,13 @@
 \begin{appendices}
-	% \chapter{}
-	% 	\includelistingpretty
-    % 	{main.py} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-    % 	{python} % Язык программирования (необязательный аргумент)
-    % 	{Исходный код программы} % Подпись листинга
+	\chapter{Исходный код программы}
+		\includelistingpretty
+    	{main.py} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+    	{python} % Язык программирования (необязательный аргумент)
+    	{Исходный код программы} % Подпись листинга
+
+	\chapter{Сформированная база данных}
+		\includelistingpretty
+    	{base.py} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+    	{} % Язык программирования (необязательный аргумент)
+    	{Исходный код программы} % Подпись листинга
 \end{appendices}
