--- a/report/report.tex
+++ b/report/report.tex
@@ -20,9 +20,9 @@
 \makereporttitle
     {Информатика, искусственный интеллект и системы управления} % Название факультета
     {Программное обеспечение ЭВМ и информационные технологии} % Название кафедры
-    {лабораторной работе №~2} % Название работы (в дат. падеже)
+    {лабораторной работе №~1} % Название работы (в дат. падеже)
     {Основы искусственного интеллекта} % Название курса (необязательный аргумент)
-    {Алгоритмы нечеткой логики} % Тема работы
+    {Опрос эксперта} % Тема работы
     {} % Номер варианта (необязательный аргумент)
     {Орду~М.~А./ИУ7-13М} % Номер группы/ФИО студента (если авторов несколько, их необходимо разделить запятой)
     {Строганов~Ю.~В.} % ФИО преподавателя
