--- a/report/01-theoretical.tex
+++ b/report/01-theoretical.tex
@@ -1,20 +1,27 @@
 \chapter{Теоретическая часть}
 
 \section{Введение}
-Цель лабораторной работы: создание экспертной системы для работы с базой знаний о вкусах и характеристиках различных сортов пива.  
+Цель лабораторной работы: создание программы для работы с базой знаний о вкусах и характеристиках различных сортов пива.  
 Задачи работы:
 \begin{itemize}
     \item Провести опрос эксперта о вкусах пива и собрать базу знаний.
     \item Реализовать фреймовую базу знаний с различными характеристиками сортов пива.
-    \item Создать консольное приложение для взаимодействия с базой знаний.
+    \item Создать приложение для взаимодействия с базой знаний.
     \item Реализовать не менее трёх запросов к системе с параметрами.
 \end{itemize}
 
 \section{Описание предметной области}
-Предметная область включает информацию о сортах пива и их характеристиках:
+Предметная область включает информацию о сортах пива и их характеристиках. На рисунке \ref{img:tree} представлена схема рассматриваемой предметной области.
+\includeimage
+    {tree} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
+    {f} % Обтекание (без обтекания)
+    {h} % Положение рисунка (см. figure из пакета float)
+    {0.8\textwidth} % Ширина рисунка
+    {Схема предметной области} % Подпись рисунка
+
 \begin{itemize}
     \item \textbf{Типы пива:} Эль, Лагер, Стаут, IPA, Пшеничное, Портер, Трипель, Бельгийский Витбир, Светлый Эль, Дабл IPA, Кёльш, Бок, Пильзенер, Американский Эль, Светлый Ламбик, Овсяный Стаут, Барливайн, Ред Эль.
     \item \textbf{Характеристики:} горечь, сладость, аромат, цвет, крепость (слабая/средняя/сильная), страна.
 \end{itemize}
 
-На основе этих знаний система может рекомендовать сорта пива по выбранным пользователем параметрам.
+На основе этих знаний система может рекомендовать сорта пива по выбранным пользователем параметрам. 
