--- a/report/02-practical.tex
+++ b/report/02-practical.tex
@@ -19,7 +19,7 @@
 \end{enumerate}
 
 На рисунке \ref{fig:beer-usecase} предствалена Use-case диаграмма программы. 
-В листинге \ref{lst:out.py} представлен пример работы с программой.
+В листинге \ref{lst:out.txt} представлен пример работы с программой.
 
 \newpage
 \begin{figure}[h!]
@@ -56,7 +56,7 @@
 
 
 \includelistingpretty
-    {out.py} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+    {out.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
     {} % Язык программирования (необязательный аргумент)
     {Пример работы с консольной программой} % Подпись листинга
 
