--- a/report/01-theoretical.tex
+++ b/report/01-theoretical.tex
@@ -20,8 +20,8 @@
     {Схема предметной области} % Подпись рисунка
 
 \begin{itemize}
-    \item \textbf{Типы пива:} Эль, Лагер, Стаут, IPA, Пшеничное, Портер, Трипель, Бельгийский Витбир, Светлый Эль, Дабл IPA, Кёльш, Бок, Пильзенер, Американский Эль, Светлый Ламбик, Овсяный Стаут, Барливайн, Ред Эль.
-    \item \textbf{Характеристики:} горечь, сладость, аромат, цвет, крепость (слабая/средняя/сильная), страна.
+    \item Сорт пива: Эль, Лагер, Стаут, IPA, Пшеничное, Портер, Трипель, Бельгийский Витбир, Светлый Эль, Дабл IPA, Кёльш, Бок, Пильзенер, Американский Эль, Светлый Ламбик, Овсяный Стаут, Барливайн, Ред Эль.
+    \item Характеристики: горечь, сладость, аромат, цвет, крепость, страна.
 \end{itemize}
 
-На основе этих знаний система может рекомендовать сорта пива по выбранным пользователем параметрам. 
+На основе этих знаний система может рекомендовать сорта пива по выбранным пользователем параметрам.
