--- a/report/02-practical.tex
+++ b/report/02-practical.tex
@@ -1,7 +1,16 @@
 \chapter{Практическая часть}
 
+\section{Особенности программной реализации}
+
+Программная реализация экспертной системы выполнена на языке Python и представляет собой интерактивное консольное приложение. Основой системы служит база знаний \texttt{base}, содержащая характеристики различных сортов пива: тип горечи, аромат, цвет, крепость и страну происхождения (при опросе экспертов данный пункт фигурировал как "страна с которой ассоциируется этот сорт пива"). 
+
+Логика взаимодействия с пользователем реализована через меню, предоставляющее четыре основных режима работы: вывод характеристик выбранного сорта, рекомендация пива по вкусовым параметрам, поиск по стране происхождения и поиск по сочетанию крепости и цвета. Каждый пункт меню связан с отдельной функцией, которая осуществляет обработку пользовательского ввода, фильтрацию данных из базы знаний и вывод результата. 
+
+Таким образом, система объединяет простую структуру базы знаний и набор процедур вывода, что позволяет эффективно подбирать сорта пива по заданным пользователем критериям.
+
+
 \section{Модель базы знаний}
-База знаний реализована с использованием фреймовой модели: каждый сорт пива представлен как фрейм с набором атрибутов (слотов).  
+База знаний реализована с использованием фреймовой модели: каждый сорт пива представлен как фрейм с набором атрибутов.  
 
 \includelistingpretty
     {frame.py} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
@@ -18,7 +27,7 @@
     \item Найти пиво по крепости и цвету
 \end{enumerate}
 
-На рисунке \ref{fig:beer-usecase} предствалена Use-case диаграмма программы. 
+На рисунке \ref{fig:beer-usecase} предствалена Use case диаграмма программы. 
 В листинге \ref{lst:out.txt} представлен пример работы с программой.
 
 \newpage
@@ -49,7 +58,7 @@
 \draw[line] (user) -- (details);
 
 \end{tikzpicture}
-\caption{Use-Case диаграмма системы}
+\caption{Use Case диаграмма}
 \label{fig:beer-usecase}
 \end{figure}
 
