--- a/report/01-theoretical.tex
+++ b/report/01-theoretical.tex
@@ -5,7 +5,7 @@
 Задачи работы:
 \begin{itemize}
     \item Провести опрос эксперта о вкусах пива и собрать базу знаний.
-    \item Реализовать фреймовую базу знаний с различными характеристиками сортов пива.
+    \item Реализовать базу знаний с различными характеристиками сортов пива.
     \item Создать приложение для взаимодействия с базой знаний.
     \item Реализовать не менее трёх запросов к системе с параметрами.
 \end{itemize}
@@ -18,10 +18,5 @@
     {h} % Положение рисунка (см. figure из пакета float)
     {0.8\textwidth} % Ширина рисунка
     {Схема предметной области} % Подпись рисунка
-
-\begin{itemize}
-    \item Сорт пива: Эль, Лагер, Стаут, IPA, Пшеничное, Портер, Трипель, Бельгийский Витбир, Светлый Эль, Дабл IPA, Кёльш, Бок, Пильзенер, Американский Эль, Светлый Ламбик, Овсяный Стаут, Барливайн, Ред Эль.
-    \item Характеристики: горечь, сладость, аромат, цвет, крепость, страна.
-\end{itemize}
 
 На основе этих знаний система может рекомендовать сорта пива по выбранным пользователем параметрам.
