--- a/report/02-practical.tex
+++ b/report/02-practical.tex
@@ -2,11 +2,9 @@
 
 \section{Особенности программной реализации}
 
-Программная реализация экспертной системы выполнена на языке Python и представляет собой интерактивное консольное приложение. Основой системы служит база знаний \texttt{base}, содержащая характеристики различных сортов пива: тип горечи, аромат, цвет, крепость и страну происхождения (замечу, что при опросе экспертов данный пункт фигурировал как 'страна с которой ассоциируется этот сорт пива', поэтому корректность именования этого атребута 'страной происхождения' подлежит сомнению). 
+Программная реализация экспертной системы выполнена на языке Python и представляет собой интерактивное консольное приложение. Основой системы служит база знаний \texttt{base}, содержащая характеристики различных сортов пива: тип горечи, аромат, цвет, крепость и страну происхождения (замечу, что при опросе эксперта данный пункт фигурировал как 'страна с которой ассоциируется этот сорт пива', поэтому корректность именования этого атребута 'страной происхождения' подлежит сомнению). 
 
 Логика взаимодействия с пользователем реализована через меню, предоставляющее четыре основных режима работы: вывод характеристик выбранного сорта, рекомендация пива по вкусовым параметрам, поиск по стране происхождения и поиск по сочетанию крепости и цвета. Каждый пункт меню связан с отдельной функцией, которая осуществляет обработку пользовательского ввода, фильтрацию данных из базы знаний и вывод результата. 
-
-Таким образом, система объединяет простую структуру базы знаний и набор процедур вывода, что позволяет эффективно подбирать сорта пива по заданным пользователем критериям.
 
 
 \section{Модель базы знаний}
